objects/sbaa__TrackedValue__c.object
<CustomObject>
    <description>Value tracked by Tracked Field.</description>
    <fields>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with the Tracked Value</description>
        <inlineHelpText>Opportunity associated with the Tracked Value</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracked Values</relationshipLabel>
        <relationshipName>TrackedValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__TrackedField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tracked Field that generated this Tracked Value</description>
        <inlineHelpText>Tracked Field that generated this Tracked Value</inlineHelpText>
        <label>Tracked Field</label>
        <referenceTo>sbaa__TrackedField__c</referenceTo>
        <relationshipLabel>Tracked Values</relationshipLabel>
        <relationshipName>TrackedValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ValueDate__c</fullName>
        <description>Stored value if data type is date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stored value if data type is date</inlineHelpText>
        <label>Value (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__ValueNumber__c</fullName>
        <description>Stored value if data type is number</description>
        <inlineHelpText>Stored value if data type is number</inlineHelpText>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ValueText__c</fullName>
        <description>Stored value if data type is text</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stored value if data type is text</inlineHelpText>
        <label>Value (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tracked Value</label>
    <nameField>
        <displayFormat>TV-{000000}</displayFormat>
        <label>Tracked Value #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracked Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>